<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlForgotPass"
    tools:context=".ForgotPasswordActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7DD9E4"
        android:id="@+id/rlContentMain">

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txtEnterMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="enter_mobile_forgot_password"
            android:layout_below="@+id/imgAppLogo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/etForgotMobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txtEnterMobile"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etForgotMobile"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnForgotNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etForgotEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>